home branding alignment fixed

--- a/src/pages/branding/branding.css
+++ b/src/pages/branding/branding.css
@@ -187,7 +187,7 @@
     .brand-data {
         flex-direction: column;
         align-items: flex-start;
-        margin-top: 20px;
+        margin-top: -90px;
         padding: 0 20px;
         gap: 10px;
     }
@@ -210,6 +210,7 @@
 
     .b-right img {
         width: 26px;
+        display: none;
     }
 }
 
